--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,5 +1,5 @@
-nav{
-    background-color: gainsboro;
+nav {
+  background-color: gainsboro;
 }
 
 .mainNav {
@@ -16,29 +16,35 @@ nav{
   cursor: pointer;
 }
 .linkGroup {
+  max-width: 80%;
+  overflow-x: auto;
+  scrollbar-width: thin;
+  scrollbar-color: transparent transparent;
+  padding: 5px 0;
   display: flex;
   align-items: center;
-  justify-content: space-evenly;
-  /* grid-template-columns: repeat(6,1fr); */
-  /* overflow-y: scroll; */
-  /* gap: 1rem; */
+  justify-content: flex-start;
+  gap: 1rem;
+  .cat_label {
+    text-decoration: none;
+    list-style: none;
+    text-align: start;
+    color: black;
+  }
+  .cat_label:hover {
+    color: white;
+  background-color: #454545;
+  padding: 8px;
+  border-radius: 10px;
+  }
 
-  .linkGroup1 {
+  /* .linkGroup1 {
     display: flex;
     li {
-        text-decoration: none;
-      list-style: none;
-      text-align: start;
       .link {
         text-decoration: none;
         color: black;
         padding: 8px;
-      }
-      .link:hover {
-        color: white;
-        background-color: #454545;
-        padding: 8px;
-        border-radius: 10px;
       }
     }
   }
@@ -60,7 +66,7 @@ nav{
         border-radius: 10px;
       }
     }
-  }
+  } */
 }
 
 @media (max-width: 980px) {
@@ -69,7 +75,7 @@ nav{
   .mainNav {
     flex-direction: column;
   }
-  .linkGroup{
+  .linkGroup {
     margin-top: 1rem;
     flex-direction: column;
     gap: 1rem;
